# lunix-pro

./: .gitignore  Cargo.toml  Makefile  README.md
backend/: .gitignore  Cargo.toml  Dockerfile.dev  Makefile
backend/src/: argon2_hasher.rs  endpoints.rs  graphql_context.rs  lib.rs  main.rs  result.rs  user_extractor.rs
backend/src/schema/: mod.rs  mutation_root.rs  pagination.rs  query_root.rs  roots.rs
backend/src/schema/groups/: group.rs  mod.rs
backend/src/schema/users/: mod.rs  user.rs  user_token.rs
db/: Cargo.toml  Makefile  db.drawio
db/migrations/db/2022-06-16-014255_init/: down.sql  up.sql
db/src/: hasher.rs  lib.rs  result.rs  schema.rs
db/src/models/: group.rs  group_permission.rs  mod.rs  page.rs  page_comment.rs  page_meta.rs  page_relation.rs  user.rs  user_token.rs
frontend/: .eslintrc.json  next-i18next.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/locales/en/: admin.yml  common.yml
frontend/pages/: index.tsx
frontend/src/: emotion.d.ts  middleware.ts
frontend/src/components/: index.ts  types.ts
frontend/src/i18n/: config.ts
frontend/src/pages/: [[...stub]].tsx  _app.tsx  _document.tsx
frontend/src/theme/: _func.scss  _light.scss  _mixins.scss  _theme-vars.scss  _vars.scss  common.ts  dark.ts  index.ts  light.ts  theme.scss  types.ts  util.ts
manager/: Cargo.toml
manager/src/: clap_parser.rs  main.rs  new_token.rs  new_user.rs
manager/src/groups/: clap_parser.rs  list.rs  mod.rs
manager/src/users/: clap_parser.rs  list.rs  mod.rs  (+2 more)
share/: docker-compose.yml  nginx-dev.conf
(+91 files in other folders)
