[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = { version = "1.0" }
actix-web = { version = "4.1", features = ["openssl"] }
actix-files = { version = "0.6" }
async-graphql = { version = "4.0" }
async-graphql-actix-web = { version = "4.0"}
openssl = { version = "0.10" }
env_logger = { version = "0.9" }
log = { version = "0.4" }
chrono = { version = "0.4", features = [ "serde" ]}
chrono-tz = { version = "0.7" }
db = { path = "../db" }
argon2 = { version = "0.4", features = ["std"]}
base64 = { version = "0.13" }
