[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0", features = [ "sqlite", "extras" ]}
diesel_migrations = { version = "2.0" }
chrono = { version = "0.4", features = [ "serde" ]}
chrono-tz = { version = "0.8" }
uuid = { version = "1.1" }
rand = { version = "0.8" }
